force-app/main/default/objects/Event__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Address of the Event</description>
    <inlineHelpText>Address of the Event</inlineHelpText>
    <label>Address</label>
    <referenceTo>Address_Book__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>