force-app/main/default/objects/Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of event</description>
    <inlineHelpText>End Date of event</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>