force-app/main/default/objects/Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Number for the event</description>
    <inlineHelpText>Number for the event</inlineHelpText>
    <label>Event#</label>
    <type>AutoNumber</type>
</CustomField>