force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>If the location is verified</description>
    <formula>Address__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the location is verified</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>