force-app/main/default/objects/Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of event</description>
    <inlineHelpText>Name of event</inlineHelpText>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>