force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the event is going to occur at an interval ?</description>
    <inlineHelpText>If the event is going to occur at an interval ?</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>