force-app/main/default/objects/Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>The number of seats available for the event</description>
    <formula>Max_Seats__c  -  People_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of seats available for the event</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>