force-app/main/default/objects/Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of event</description>
    <inlineHelpText>Start Date of event</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>