force-app/main/default/objects/Event__c/validationRules/EndDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateRule</fullName>
    <active>true</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( End_Date__c )),  
    OR(
        End_Date__c &lt;=  Start_Date__c ,  
        End_Date__c  - Start_Date__c &lt; 1  
    )
)</errorConditionFormula>
    <errorMessage>End date must be after 1 day of start date</errorMessage>
</ValidationRule>