force-app/main/default/objects/Event__c/validationRules/InPersonEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>InPersonEvent</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must select Location on Event Record</description>
    <errorConditionFormula>ISPICKVAL(Event_Type__c, &apos;In-Person&apos;) &amp;&amp; NOT(ISBLANK(Address__c ))</errorConditionFormula>
    <errorMessage>There must be a location selected for In-Person events</errorMessage>
</ValidationRule>