force-app/main/default/objects/Event__c/validationRules/RecurringFrequency.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurringFrequency</fullName>
    <active>true</active>
    <description>Checkbox is checked then user must need to fill Frequency otherwise if checkbox not selected then frequency must be empty</description>
    <errorConditionFormula>(Recurring__c &amp;&amp;  ISPICKVAL( Frequency__c , &quot;&quot;)) ||
    (NOT(Recurring__c) &amp;&amp;  NOT(ISPICKVAL( Frequency__c , &quot;&quot;)))</errorConditionFormula>
    <errorMessage>Select valid values for Recurrng and Frequency feilds</errorMessage>
</ValidationRule>