force-app/main/default/objects/Event__c/validationRules/VirtualEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>VirtualEvent</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field, then Prevent User to Select Location on Event Record</description>
    <errorConditionFormula>ISPICKVAL(Event_Type__c, &apos;Virtual&apos;) &amp;&amp;  NOT(ISBLANK(Address__c ))</errorConditionFormula>
    <errorMessage>Virtual event can not have any location associated</errorMessage>
</ValidationRule>